update full 120key in keyboard

--- a/akko_lavender_purples/config.json
+++ b/akko_lavender_purples/config.json
@@ -59,7 +59,7 @@
     "52": "M.mp3",
     "53": "M.mp3",
     "54": "M.mp3",
-    "55": null,
+    "55": "KEY.mp3",
     "56": "ENTER.mp3",
     "57": "SPACE.mp3",
     "58": "ENTER.mp3",
@@ -70,8 +70,61 @@
     "63": "T.mp3",
     "64": "Y.mp3",
     "65": "U.mp3",
-    "66": null,
-    "67": null,
+    "66": "KEY.mp3",
+    "67": "KEY.mp3",
+    "68": "KEY.mp3",
+    "69": "KEY.mp3",
+    "70": "KEY.mp3",
+    "71": "KEY.mp3",
+    "72": "KEY.mp3",
+    "73": "KEY.mp3",
+    "74": "KEY.mp3",
+    "75": "KEY.mp3",
+    "76": "KEY.mp3",
+    "77": "KEY.mp3",
+    "78": "KEY.mp3",
+    "79": "KEY.mp3",
+    "80": "KEY.mp3",
+    "81": "KEY.mp3",
+    "82": "KEY.mp3",
+    "83": "KEY.mp3",
+    "84": "KEY.mp3",
+    "85": "KEY.mp3",
+    "86": "KEY.mp3",
+    "87": "KEY.mp3",
+    "88": "KEY.mp3",
+    "89": "KEY.mp3",
+    "90": "KEY.mp3",
+    "91": "KEY.mp3",
+    "92": "KEY.mp3",
+    "93": "KEY.mp3",
+    "94": "KEY.mp3",
+    "95": "KEY.mp3",
+    "96": "KEY.mp3",
+    "97": "KEY.mp3",
+    "98": "KEY.mp3",
+    "99": "KEY.mp3",
+    "100": "KEY.mp3",
+    "101": "KEY.mp3",
+    "102": "KEY.mp3",
+    "103": "KEY.mp3",
+    "104": "KEY.mp3",
+    "105": "KEY.mp3",
+    "106": "KEY.mp3",
+    "107": "KEY.mp3",
+    "108": "KEY.mp3",
+    "109": "KEY.mp3",
+    "110": "KEY.mp3",
+    "111": "KEY.mp3",
+    "112": "KEY.mp3",
+    "113": "KEY.mp3",
+    "114": "KEY.mp3",
+    "115": "KEY.mp3",
+    "116": "KEY.mp3",
+    "117": "KEY.mp3",
+    "118": "KEY.mp3",
+    "119": "KEY.mp3",
+    "120": "KEY.mp3",
     "272": "MOUSE_LEFT.mp3",
     "273": "MOUSE_RIGHT.mp3",
     "274": "MOUSE_MIDDLE.mp3",
